--- a/rebar.config
+++ b/rebar.config
@@ -10,5 +10,6 @@
   {erlualib, ".*", {git, "https://github.com/duwei/erlualib.git", "master"}},
   {erlport, ".*", {git, "https://github.com/hdima/erlport.git", "master"}},
   {jsx, ".*", {git, "https://github.com/talentdeficit/jsx", "master"}},
+  {erlware_commons, ".*", {git, "https://github.com/erlware/erlware_commons.git", "master"}},
   {couchbeam, ".*", {git, "git://github.com/benoitc/couchbeam.git", {branch, "master"}}}
 ]}.
