--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,8 @@
 {deps, [
   {lager, ".*", {git, "https://github.com/basho/lager", "master"}},
   {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "0.9.0"}},
-  {erlualib, ".*", {git, "https://github.com/duwei/erlualib.git", "master"}},
+  {erlang_js, ".*", {git, "https://github.com/basho/erlang_js", "master"}},
+%  {erlualib, ".*", {git, "https://github.com/duwei/erlualib.git", "master"}},
   {erlport, ".*", {git, "https://github.com/hdima/erlport.git", "master"}},
   {jsx, ".*", {git, "https://github.com/talentdeficit/jsx", "master"}},
   {erlware_commons, ".*", {git, "https://github.com/erlware/erlware_commons.git", "master"}},
