--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
   "apps/*"
 ]}.
 {deps, [
+  {rebar_deps_graph, ".*", {git, "git://github.com/emedia-project/rebar_deps_graph"}},
   {lager, ".*", {git, "https://github.com/basho/lager", "master"}},
   {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "0.9.0"}},
   {erlang_js, ".*", {git, "https://github.com/basho/erlang_js", "master"}},
@@ -14,3 +15,6 @@
   {erlware_commons, ".*", {git, "https://github.com/erlware/erlware_commons.git", "master"}},
   {couchbeam, ".*", {git, "git://github.com/benoitc/couchbeam.git", {branch, "master"}}}
 ]}.
+
+{deps_graph_file, "ebill-dependencies.gv"}.
+{plugins, [deps_graph_plugin]}.
