--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,7 @@
   {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "0.9.0"}},
   {erlang_js, ".*", {git, "https://github.com/basho/erlang_js", "master"}},
 %  {erlualib, ".*", {git, "https://github.com/duwei/erlualib.git", "master"}},
-  {erlport, ".*", {git, "https://github.com/hdima/erlport.git", "master"}},
+  {erlport, ".*", {git, "https://github.com/nexkap/erlport.git", "master"}},
   {jsx, ".*", {git, "https://github.com/talentdeficit/jsx", "master"}},
   {erlware_commons, ".*", {git, "https://github.com/erlware/erlware_commons.git", "master"}},
   {couchbeam, ".*", {git, "https://github.com/benoitc/couchbeam.git", {branch, "master"}}}
