--- a/debian/control
+++ b/debian/control
@@ -44,7 +44,7 @@ Depends: adduser,
          ruby-http,
          ruby-json,
          ruby-redis,
-         ruby-sinatra
+         ruby-sinatra,
          ${misc:Depends},
          ruby2.1,
          ${shlibs:Depends}
