--- a/debian/rules
+++ b/debian/rules
@@ -8,3 +8,9 @@ include /usr/share/dpkg/default.mk
 # main packaging script based on dh7 syntax
 %:
 	dh $@
+
+override_dh_auto_clean:
+
+override_dh_auto_build:
+
+override_dh_auto_test:
